[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mo-cpmgem"
version = "0.1.0"
description = "Port of https://github.com/henryaddison/mlde"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "numpy>=1.26,<1.27",
  "xarray>=2024.2",
  "matplotlib",
  "torch>=2.4",
  "torchvision",
  "iris",
  "metpy",
  "absl-py>=2.1.0",
  "cdo",
  "codetiming",
  "ml-collections",
  "shortuuid",
  "typer",
  "cftime",
  "cartopy",
  "netCDF4",
  "scipy",
  "tqdm",
  "ninja"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mlde*"]

[tool.ruff]
line-length = 100
exclude = [
  ".git",
  ".pytest_cache",
  ".ruff_cache",
  ".vscode",
  "_build",
  "build",
  "dist",
]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.pytest.ini_options]
# None for the moment